--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -2,7 +2,7 @@ name: Semgrep
 
 on:
   # Scan changed files in PRs, block on new issues only (existing issues ignored)
-  pull_request: {}
+  push
 
   # Scan all files on branches, block on any issues
   # push:
